--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -133,5 +133,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+	<h3> Hello DevOps </h3>
 	</body>
 </html>
