Direct commit with skip staged area

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -133,6 +133,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-	<h3> Hello DevOps </h3>
+	<h3> Hello DevOps Git Session</h3>
 	</body>
 </html>
