remote repo commit

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -134,5 +134,7 @@
 			<script src="assets/js/main.js"></script>
 
 	<h3> Hello DevOps Git Session</h3>
+
+<h3> From Remote repo </h3>
 	</body>
 </html>
