change the H1 tag

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,8 +29,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<div class="inner">
-								<h1>Hey, I'm Snapshot</h1>
-								<p>A fully responsive gallery template by <a href="https://templated.co">TEMPLATED</a></p>
+								<h1>Hey, I'm Snapshot for DevOps Session</h1>
+								<p>A fully responsive gallery template by DevOps</a></p>
 								<ul class="actions">
 									<li><a href="#galleries" class="button alt scrolly big">Continue</a></li>
 								</ul>
